force-app/main/default/objects/Overtime_Offers__c/Overtime_Offers__c.object-meta.xml
<CustomObject>
    <label>Resource Overtime Offer</label>
    <nameField>
        <displayFormat>OA-{00000}</displayFormat>
        <label>Resource Overtime Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Overtime Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>