force-app/main/default/objects/Overtime_Offers__c/fields/Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>Availability_Type__c</fullName>
    <label>Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Day Off</fullName>
            </value>
            <value>
                <fullName>Additional Hours</fullName>
            </value>
            <value>
                <fullName>Non-Working</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (1h)</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (2h)</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (3h)</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (4h)</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (5h)</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (6h)</fullName>
            </value>
            <value>
                <fullName>Overtime - Before (Any)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (1h)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (2h)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (3h)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (4h)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (5h)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (6h)</fullName>
            </value>
            <value>
                <fullName>Overtime - After (Any)</fullName>
            </value>
            <value>
                <fullName>RDO Offering</fullName>
            </value>
            <value>
                <fullName>Overtime Offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>