force-app/main/default/objects/Overtime_Offers__c/fields/Flow_label__c.field-meta.xml
<CustomField>
    <fullName>Flow_label__c</fullName>
    <formula>TEXT(Status__c) + &apos; &apos; + TEXT(Offer_Start_Time__c)</formula>
    <label>Flow label</label>
    <type>Text</type>
</CustomField>