force-app/main/default/objects/Overtime_Offers__c/fields/Local_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Local_Start_Time__c</fullName>
    <label>Local Start Time</label>
    <length>64</length>
    <type>Text</type>
</CustomField>