force-app/main/default/objects/Overtime_Offers__c/fields/Offer_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Offer_Finish_Time__c</fullName>
    <label>Offer Finish Time</label>
    <type>DateTime</type>
</CustomField>