force-app/main/default/objects/Overtime_Offers__c/fields/Offer_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Offer_Start_Time__c</fullName>
    <label>Offer Start Time</label>
    <type>DateTime</type>
</CustomField>