force-app/main/default/objects/Overtime_Offers__c/fields/Offer_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Submit_Date__c</fullName>
    <label>Offer Submit Date</label>
    <type>DateTime</type>
</CustomField>