force-app/main/default/objects/Overtime_Offers__c/fields/Overtime_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Reason__c</fullName>
    <label>Overtime Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Overtime</fullName>
            </value>
            <value>
                <fullName>Required Overtime</fullName>
            </value>
            <value>
                <fullName>Storm Mode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>