force-app/main/default/objects/Overtime_Offers__c/fields/Recall_Date__c.field-meta.xml
<CustomField>
    <fullName>Recall_Date__c</fullName>
    <label>Recall Date</label>
    <type>DateTime</type>
</CustomField>