force-app/main/default/objects/Overtime_Offers__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>Service_Resource__r.Name</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>