force-app/main/default/objects/Overtime_Offers__c/fields/Seniority_Date__c.field-meta.xml
<CustomField>
    <fullName>Seniority_Date__c</fullName>
    <formula>Service_Resource__r.Hire_Date__c</formula>
    <label>Seniority Date</label>
    <type>Date</type>
</CustomField>