force-app/main/default/objects/Overtime_Offers__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Service_Resource_Overtime_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>