force-app/main/default/objects/Overtime_Offers__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <formula>Service_Resource__r.Primary_Service_Territory__r.Name</formula>
    <label>Service Territory</label>
    <type>Text</type>
</CustomField>