force-app/main/default/objects/Overtime_Offers__c/validationRules/Finish_time_must_be_less_than_1030PM.validationRule-meta.xml
<ValidationRule>
    <fullName>Finish_time_must_be_less_than_1030PM</fullName>
    <active>false</active>
    <errorConditionFormula>RIGHT(Local_End_Time__c, 5) &gt; &apos;22:30&apos;</errorConditionFormula>
    <errorMessage>Finish time must be less than 10:30PM</errorMessage>
</ValidationRule>