force-app/main/default/objects/Overtime_Offers__c/validationRules/Start_time_cannot_be_prior_to_8_AM.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_time_cannot_be_prior_to_8_AM</fullName>
    <active>false</active>
    <errorConditionFormula>RIGHT(Local_Start_Time__c, 5) &lt; &apos;08:00&apos;</errorConditionFormula>
    <errorMessage>Offer Start time must be greater than 8 AM</errorMessage>
</ValidationRule>