force-app/main/default/objects/Overtime_Offers__c/listViews/All_Overtime_Offers.listView-meta.xml
<ListView>
    <fullName>All_Overtime_Offers</fullName>
    <columns>NAME</columns>
    <columns>Service_Resource__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Offer_Submit_Date__c</columns>
    <columns>Offer_Start_Time__c</columns>
    <columns>Offer_Finish_Time__c</columns>
    <columns>Planned_Duration__c</columns>
    <columns>Status__c</columns>
    <columns>Availability_Type__c</columns>
    <columns>Seniority_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Overtime_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Overtime Offers</label>
</ListView>